pharma-ml-pipeline/kubemanifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pharma-ml-service
spec:
  selector:
    app: pharma-ml
  ports:
  - port: 8501
    targetPort: 8501
  type: LoadBalancer
